[!HOTFIX] : Security WebSocket Header ADD
Change-Id: Ibe26dc05f3e5a3b4c6747ed989c76f36a8864e71